--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^5.9.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-elements": "^3.1.0",
-    "react-native-vector-icons": "^8.0.0"
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-vector-icons": "^8.0.0",
+    "react-navigation": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
